# achaDO

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PRD.md
docs/design/: screens.jsx  telas.html
src/achado/panel/static/: styles.css
