[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "achado"
version = "0.1.0"
description = "Monitore Diários Oficiais do Brasil sem esforço."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Coleta HTTP
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    # Coleta de páginas dinâmicas (JavaScript)
    "playwright>=1.44",
    # Extração de texto de PDFs (DOEs; DOU usa HTML/API)
    "pdfplumber>=0.11",
    # OCR condicional
    "pytesseract>=0.3",
    # Agendamento da rotina diária
    "apscheduler>=3.10",
    # Painel local (API + templates)
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # Ícone na bandeja do sistema e notificações nativas
    "pystray>=0.19",
    "plyer>=2.1",
    # Segurança: armazenamento de credenciais SMTP
    "keyring>=25.2",
    # Caminhos de dados por plataforma (%APPDATA% no Windows)
    "platformdirs>=4.2",
    # Logging estruturado com rotação
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx[test]>=0.27",       # TestClient do HTTPX para FastAPI
    "ruff>=0.4",               # linter + formatter
    "pyinstaller>=6.6",        # empacotamento do .exe
]

[project.scripts]
achado = "achado.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
